--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/assets/favicon.ico" rel="icon">
+  <link href="./static/assets/favicon2.ico" rel="icon">
 
   <title>Contact Me</title>  
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon2.ico') }}">
@@ -79,24 +79,24 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          +1 630 596-3980
+                          PHONE NUMBER
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          kevin.steen99@gmail.com
+                          EMAIL
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          Denver, CO
+                          LOCATION
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
+                      <a href="https://github.com/BooBeary" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
                       <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
