--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -67,24 +67,24 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          +1 630 596-3980
+                          PHONE
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          kevin.steen99@gmail.com
+                          EMAIL
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          Denver, CO
+                          LOCATION
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
+                      <a href="http://www.github.com/boobeary" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
                       <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
